[metadata]
name = strgen
version = attr: strgen.__version__
url = https://github.com/daisuke-t-jp/strgen
author = Daisuke TONOSAKI
author_email = daisuke.t.jp@gmail.com
description = The generate tool of iOS / Android localized strings.
long-description-content-type = text/markdown
long_description = file: README.md
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
packages =
    strgen
install_requires =
    PyYAML>=5.3.1

[options.entry_points]
console_scripts = 
    strgen = strgen.main:main
